<resources>
    <string name="app_name">edu plane</string>
    <string name="Email">البريد الوزارى</string>
    <string name="password">كلمة المرور</string>
    <string name="password2">تأكـيد كلمة المرور</string>
    <string name="login">تسجيل الدخـول</string>
    <string name="noAccout">ليس لديك حساب؟</string>
    <string name="noAccout2">سجل الأن</string>
    <string name="Name">الأسـم</string>
    <string name="Special">التخصص</string>
    <string name="governate">هيئة التخصصات السعوديـه</string>
    <string name="signup">تسجيل</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">الرئيسية</string>
    <string name="word">دورات أطباء</string>
    <string name="pdf">دورات ادارية</string>
    <string name="video">دورات فنية</string>
    <string name="pic">دورات أخرى</string>
    <string name="title_activity_home2">الرئيسيه</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="account">حسابى</string>
    <string name="courses">دوراتى</string>
    <string name="signout">تسجيل الخروج</string>
    <string name="Phone">رقم الجوال </string>
    <string name="save">حفظ</string>
    <string name="email">ادخل البريد الوزاري !</string>
    <string name="passworderror">ادخل كلمة المرور !</string>
    <string name="errorInput">هذه البيانات غير صحيحه برجاء التأكد من البيانات واعادة المحاوله</string>
    <string name="phone">رقم التليفون</string>
    <string name="governateerror">ادخل الهيئه السعوديه !</string>
    <string name="specialerror">ادخل التخصص !</string>
    <string name="nameerror">ادخل الاسم !</string>
    <string name="phoneerror">ادخل التليفون !</string>
    <string name="Adminerror">ادخل الادارة !</string>
    <string name="errorEmail">هذا البريد الوزاري مستخدم من قبل</string>
    <string name="errorPhone">رقم التليفون مستخدم من قبل</string>
    <string name="fackdata">اهلا يا صلاح</string>
    <string name="coursesDetails">تفاصيل الكورس</string>
    <string name="datecoures">مواعيد الحجـز</string>
    <string name="startReservation">بداية حجز الكورس 15 مايو</string>
    <string name="endReservation">نهاية حجز الكورس  20 مايو</string>
    <string name="reservenow">حجز الأن</string>
    <string name="empty">لم تسجل فى اى دوره حتى الان .</string>
    <string name="empty2">لا يوجد دورات بهذا النوع .</string>
    <string name="emptyItem">لا يوجد دروس فى هذا الكورس</string>
    <string name="adv">Health control center at king Abdulaziz jeddah Ariport</string>
    <string name="In">الادارة التي تعمل بها</string>
    <string name="developer">المطور</string>
    <string name="code">الكود</string>
    <string name="codeError">ادخل الكود</string>
    <string name="codeErrorcorrect">الكود غير صحيح</string>
</resources>
