<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:checkable="true"
            android:iconTint="@color/colorPrimary"/>
        <item
            android:id="@+id/account"
            android:icon="@drawable/user"
            android:title="@string/account"
            android:iconTint="@color/colorPrimary"/>

        <item
            android:id="@+id/courses"
            android:icon="@drawable/stydy"
            android:title="@string/courses"
            android:iconTint="@color/colorPrimary"/>

        <item
            android:id="@+id/out"
            android:icon="@drawable/of"
            android:title="@string/signout"
            android:iconTint="@color/colorPrimary"/>

    </group>



</menu>
