<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whilte"
    tools:context=".Activities.loginActivity">

    <ImageView
        android:id="@+id/HeaderLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/imag" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/HeaderLogin"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLogin"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            style="@style/Ed"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/iphon"
            android:hint="@string/Email" />

        <EditText
            style="@style/Ed"
            android:drawableLeft="@drawable/lo"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape2"
            android:text="@string/login"
            android:textColor="@color/whilte"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/NoAccount"
            android:onClick="signup"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccout2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccout"
                android:textColor="#4849a7" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>