<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AccountActivity"
    android:orientation="vertical">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <!--<de.hdodenhof.circleimageview.CircleImageView-->
               <!--android:layout_width="120dp"-->
               <!--android:layout_height="120dp"-->
               <!--android:src="@drawable/imags"-->
               <!--android:layout_gravity="center"-->
               <!--android:layout_marginTop="20dp"/>-->

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:paddingLeft="20dp"
               android:paddingRight="20dp"
               android:paddingTop="30dp">
               <EditText
                   android:id="@+id/nameAccount"
                   style="@style/EdWhite"
                   android:hint="@string/Name"
                   android:layout_marginBottom="10dp"
                   android:drawableLeft="@drawable/user"
                   android:drawableTint="@color/colorPrimary"/>

               <EditText
                   android:id="@+id/phoneAccount"
                   style="@style/EdWhite"
                   android:hint="@string/Phone"
                   android:layout_marginBottom="10dp"
                   android:drawableLeft="@drawable/iphon"
                   android:drawableTint="@color/colorPrimary"/>

               <EditText
                   android:id="@+id/emailAccount"
                   style="@style/EdWhite"
                   android:hint="@string/Email"
                   android:layout_marginBottom="10dp"
                   android:drawableLeft="@drawable/mail"
                   android:drawableTint="@color/colorPrimary"/>

               <EditText
                   android:id="@+id/passwordAccount"
                   style="@style/EdWhite"
                   android:inputType="textPassword"
                   android:hint="@string/password"
                   android:layout_marginBottom="10dp"
                   android:drawableLeft="@drawable/lo"
                   android:drawableTint="@color/colorPrimary"/>

               <EditText
                   android:id="@+id/passwordAccount2"
                   style="@style/EdWhite"
                   android:hint="@string/password2"
                   android:inputType="textPassword"
                   android:layout_marginBottom="10dp"
                   android:drawableLeft="@drawable/lo"
                   android:drawableTint="@color/colorPrimary"/>
               <Button
                   android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:layout_marginTop="20dp"
                   android:layout_marginBottom="20dp"
                   android:background="@drawable/buttonshape2"
                   android:text="@string/save"
                   android:onClick="save"
                   android:textColor="@color/whilte"
                   android:textSize="20sp" />
           </LinearLayout>

       </LinearLayout>
   </ScrollView>

</LinearLayout>