<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".Activities.CourseReservationActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <com.daimajia.slider.library.SliderLayout
               android:id="@+id/sliderDetalis"
               android:layout_width="match_parent"
               custom:pager_animation="Accordion"
               custom:auto_cycle="true"
               custom:indicator_visibility="visible"
               custom:pager_animation_span="1100"
               android:layout_height="200dp"
               android:layout_marginTop="10dp"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_marginTop="10dp"
               android:padding="10dp"
               android:layout_height="wrap_content"
               android:background="@drawable/shape_rectangle"
               android:text=""
               android:id="@+id/detailsDetalis"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/datecoures"
               android:textColor="@color/colorPrimaryDark"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:textAppearance="?android:textAppearanceMedium"
               android:layout_marginTop="15dp"
               android:layout_marginBottom="15dp"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/shape_rectangle"
               android:orientation="horizontal">
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:padding="10dp"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_gravity="right"
                   android:gravity="center_vertical">
                   <TextView
                       android:layout_width="0dp"
                       android:layout_weight="5"
                       android:layout_marginRight="5dp"
                       android:layout_height="wrap_content"
                       android:text="@string/endReservation"
                       android:id="@+id/endDetalis"/>

                   <ImageView
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="wrap_content"
                       android:src="@drawable/clock"/>

               </LinearLayout>
               <View
                   android:layout_width="1dp"
                   android:layout_height="match_parent"
                   android:background="@color/offBlack"
                   />
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:padding="10dp"
                   android:layout_height="match_parent"
                   android:orientation="horizontal"
                   android:layout_gravity="right"
                   android:gravity="center_vertical|left">
                   <TextView
                       android:layout_width="0dp"
                       android:layout_weight="5"
                       android:layout_marginRight="5dp"
                       android:layout_height="wrap_content"
                       android:text="@string/startReservation"
                       android:id="@+id/startDetalis"/>

                   <ImageView
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="wrap_content"
                       android:src="@drawable/clock"/>

               </LinearLayout>

           </LinearLayout>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/buttonshape2"
               android:text="@string/reservenow"
               android:textAppearance="?android:textAppearanceMedium"
               android:textStyle="bold"
               android:textColor="@color/whilte"
               android:layout_marginTop="10dp"
               android:onClick="finishReservation"/>
       </LinearLayout>
   </ScrollView>
</LinearLayout>