<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.HomeActivity"
    tools:showIn="@layout/app_bar_home2">
        <LinearLayout
            android:id="@+id/logoHome"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/fackimage">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logos"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adv"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/whilte"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/logoHome"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/contentWord"
                    android:onClick="categoryActivity">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/icon1"
                        android:scaleType="centerCrop"
                        android:id="@+id/wordHome"
                        android:layout_centerInParent="true"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_alignParentLeft="true"
                        android:layout_height="match_parent"
                        android:background="#d9d9d9"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wordHome"
                        android:text="@string/word"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#d9d9d9"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/contentPicture"
                    android:onClick="categoryActivity">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon4"
                        android:id="@+id/picHome"
                        android:layout_centerInParent="true"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_alignParentLeft="true"
                        android:layout_height="match_parent"
                        android:background="#d9d9d9"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/picHome"
                        android:text="@string/pic"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"

                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/contentPdf"
                    android:onClick="categoryActivity">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:src="@drawable/icon2"
                        android:scaleType="centerCrop"
                        android:id="@+id/pdfHome"
                        android:layout_centerInParent="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pdfHome"
                        android:text="@string/pdf"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"

                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#d9d9d9"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/contentVideo"
                    android:onClick="categoryActivity">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon3"
                        android:id="@+id/videoHome"
                        android:layout_centerInParent="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/videoHome"
                        android:text="@string/video"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"

                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
